--- a/Freetify/DStrm.csproj
+++ b/Freetify/DStrm.csproj
@@ -67,16 +67,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DriveUtils.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="DStrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DStrm.Designer.cs">
+      <DependentUpon>DStrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="DStrm.resx">
+      <DependentUpon>DStrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
