--- a/SyncDrvStrm/packages.config
+++ b/SyncDrvStrm/packages.config
@@ -1,20 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BoDi" version="1.4.1" targetFramework="net461" />
-  <package id="Castle.Core" version="3.2.0" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="Gherkin" version="6.0.0" targetFramework="net461" />
-  <package id="Google.Apis" version="1.38.0" targetFramework="net461" />
-  <package id="Google.Apis.Auth" version="1.38.0" targetFramework="net461" />
-  <package id="Google.Apis.Core" version="1.38.0" targetFramework="net461" />
-  <package id="Google.Apis.Drive.v3" version="1.38.0.1512" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
-  <package id="SpecFlow" version="3.0.220" targetFramework="net461" />
-  <package id="SpecFlow.MsTest" version="3.0.220" targetFramework="net461" />
+  <package id="Google.Apis" version="1.40.3" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.40.3" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.40.3" targetFramework="net461" />
+  <package id="Google.Apis.Drive.v3" version="1.40.3.1694" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="SpecFlow" version="3.0.225" targetFramework="net461" />
+  <package id="SpecFlow.MsTest" version="3.0.225" targetFramework="net461" />
   <package id="SpecFlow.SharedSteps" version="2.0.1" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net461" />
 </packages>
