--- a/SyncDrvStrm/MigrationBackup/6432ebab/DStrm/packages.config
+++ b/SyncDrvStrm/MigrationBackup/6432ebab/DStrm/packages.config
@@ -7,6 +7,9 @@
   <package id="Google.Apis.Auth" version="1.40.3" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.40.3" targetFramework="net461" />
   <package id="Google.Apis.Drive.v3" version="1.40.3.1694" targetFramework="net461" />
+  <package id="Microsoft.Toolkit.Forms.UI.Controls.WebView" version="6.1.1" targetFramework="net462" />
+  <package id="Microsoft.Web.WebView2" version="0.9.579" targetFramework="net462" />
+  <package id="Microsoft.Windows.SDK.Contracts" version="10.0.18362.2005" targetFramework="net462" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
@@ -16,6 +19,8 @@
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net462" />
+  <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net461" />
